--- a/index.html
+++ b/index.html
@@ -538,6 +538,27 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-footer">
+          <div class="wrap-input">
+            <label class="subscribe-label" for="subscribe-input"
+              >Subscribe</label
+            >
+
+            <input
+              type="email"
+              name="user-email"
+              id="subscribe-input"
+              placeholder="E-mail"
+              class="subscribe-input"
+            />
+          </div>
+          <button type="submit" class="btn-subscribe">
+            Subscribe
+            <svg width="24" height="24" class="svg-btn">
+              <use href="./images/icons.svg#frame"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </footer>
   </body>
