--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
           </ul>
         </div>
         <div class="subscribe-footer">
-          <div class="wrap-input">
+          <form class="wrap-input">
             <label class="subscribe-label" for="subscribe-input"
               >Subscribe</label
             >
@@ -551,7 +551,7 @@
               placeholder="E-mail"
               class="subscribe-input"
             />
-          </div>
+          </form>
           <button type="submit" class="btn-subscribe">
             Subscribe
             <svg width="24" height="24" class="svg-btn">
@@ -561,5 +561,54 @@
         </div>
       </div>
     </footer>
+    <div class="modal-overlay is-open">
+      <div class="modal">
+        <button type="submit" class="btn-close">
+          <svg class="btn-close-svg" width="4" height="4">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form>
+          <label for="">Name</label>
+          <div>
+            <input type="text" />
+            <svg width="18" height="24">
+              <use href="./images/icons.svg#person"></use>
+            </svg>
+          </div>
+          <label for="">Phone</label>
+          <div>
+            <input type="tel" name="" id="" />
+            <svg width="18" height="24">
+              <use href="./images/icons.svg#phone"></use>
+            </svg>
+          </div>
+          <label for="">Email</label>
+          <div>
+            <input type="email" name="" id="" />
+            <svg width="18" height="24">
+              <use href="./images/icons.svg#email"></use>
+            </svg>
+          </div>
+          <label for="">Comment</label>
+          <div>
+            <textarea name="" id=""></textarea>
+          </div>
+          <div>
+            <input type="checkbox" name="" />
+            <label for="">
+              <span class="checkbox-span">
+                <svg width="16" height="16">
+                  <use href="./images/icons.svg#checkbox"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="">Privacy Policy</a>
+            </label>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
