--- a/index.html
+++ b/index.html
@@ -564,34 +564,34 @@
     <div class="modal-overlay is-open">
       <div class="modal">
         <button type="submit" class="btn-close">
-          <svg class="btn-close-svg" width="4" height="4">
+          <svg class="btn-close-svg" width="8" height="8">
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form>
-          <label for="">Name</label>
-          <div>
-            <input type="text" />
-            <svg width="18" height="24">
+          <label for="" class="modal-label">Name</label>
+          <div class="cont-input">
+            <input type="text" class="modal-input" />
+            <svg width="18" height="24" class="svg-input">
               <use href="./images/icons.svg#person"></use>
             </svg>
           </div>
-          <label for="">Phone</label>
-          <div>
-            <input type="tel" name="" id="" />
-            <svg width="18" height="24">
+          <label for="" class="modal-label">Phone</label>
+          <div class="cont-input">
+            <input type="tel" name="" id="" class="modal-input" />
+            <svg width="18" height="24" class="svg-input">
               <use href="./images/icons.svg#phone"></use>
             </svg>
           </div>
-          <label for="">Email</label>
-          <div>
-            <input type="email" name="" id="" />
-            <svg width="18" height="24">
+          <label for="" class="modal-label">Email</label>
+          <div class="cont-input">
+            <input type="email" name="" id="" class="modal-input" />
+            <svg width="18" height="24" class="svg-input">
               <use href="./images/icons.svg#email"></use>
             </svg>
           </div>
-          <label for="">Comment</label>
+          <label for="" class="modal-label">Comment</label>
           <div>
             <textarea name="" id=""></textarea>
           </div>
