--- a/index.html
+++ b/index.html
@@ -570,43 +570,81 @@
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form>
-          <label for="" class="modal-label">Name</label>
-          <div class="cont-input">
-            <input type="text" class="modal-input" />
-            <svg width="18" height="24" class="svg-input">
-              <use href="./images/icons.svg#person"></use>
-            </svg>
+          <div class="cont-form">
+            <label for="input-person" class="modal-label">Name</label>
+            <div class="cont-input">
+              <input
+                type="text"
+                class="modal-input"
+                name="user-name"
+                id="input-person"
+                required
+              />
+              <svg width="18" height="24" class="svg-input">
+                <use href="./images/icons.svg#person"></use>
+              </svg>
+            </div>
           </div>
-          <label for="" class="modal-label">Phone</label>
-          <div class="cont-input">
-            <input type="tel" name="" id="" class="modal-input" />
-            <svg width="18" height="24" class="svg-input">
-              <use href="./images/icons.svg#phone"></use>
-            </svg>
+          <div class="cont-form">
+            <label for="input-phone" class="modal-label">Phone</label>
+            <div class="cont-input">
+              <input
+                type="tel"
+                name="user-phone"
+                id="input-phone"
+                class="modal-input"
+                required
+              />
+              <svg width="18" height="24" class="svg-input">
+                <use href="./images/icons.svg#phone"></use>
+              </svg>
+            </div>
           </div>
-          <label for="" class="modal-label">Email</label>
-          <div class="cont-input">
-            <input type="email" name="" id="" class="modal-input" />
-            <svg width="18" height="24" class="svg-input">
-              <use href="./images/icons.svg#email"></use>
-            </svg>
+          <div class="cont-form">
+            <label for="input-email" class="modal-label">Email</label>
+            <div class="cont-input">
+              <input
+                type="email"
+                name="user-email"
+                id="input-email"
+                class="modal-input"
+                required
+              />
+              <svg width="18" height="24" class="svg-input">
+                <use href="./images/icons.svg#email"></use>
+              </svg>
+            </div>
           </div>
-          <label for="" class="modal-label">Comment</label>
-          <div>
-            <textarea name="" id=""></textarea>
+          <div class="cont-textarea">
+            <label for="user-comment" class="modal-label">Comment</label>
+            <div>
+              <textarea
+                name="user-comment"
+                id="user-comment"
+                class="modal-textarea"
+                placeholder="Text input"
+              ></textarea>
+            </div>
           </div>
-          <div>
-            <input type="checkbox" name="" />
-            <label for="">
+          <div class="checkbox-cont">
+            <input
+              type="checkbox"
+              name="privacy-checkbox"
+              class="checkbox visually-hidden"
+              id="privacy-checkbox"
+              required
+            />
+            <label for="privacy-checkbox" class="checkbox-label">
               <span class="checkbox-span">
-                <svg width="16" height="16">
-                  <use href="./images/icons.svg#checkbox"></use>
+                <svg width="10" height="8" class="checkbox-icon">
+                  <use href="./images/icons.svg#vector"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
-              <a href="">Privacy Policy</a>
+              <a href="" class="checkbox-link">Privacy Policy</a>
             </label>
           </div>
+          <button type="submit" class="submit-btn">Send</button>
         </form>
       </div>
     </div>
