--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
     </footer>
     <div class="modal-overlay is-open">
       <div class="modal">
-        <button type="submit" class="btn-close">
+        <button type="button" class="btn-close">
           <svg class="btn-close-svg" width="8" height="8">
             <use href="./images/icons.svg#close"></use>
           </svg>
