--- a/index.html
+++ b/index.html
@@ -571,13 +571,13 @@
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form>
           <div class="cont-form">
-            <label for="input-person" class="modal-label">Name</label>
+            <label for="user-name" class="modal-label">Name</label>
             <div class="cont-input">
               <input
                 type="text"
                 class="modal-input"
                 name="user-name"
-                id="input-person"
+                id="user-name"
                 required
               />
               <svg width="18" height="24" class="svg-input">
@@ -586,12 +586,12 @@
             </div>
           </div>
           <div class="cont-form">
-            <label for="input-phone" class="modal-label">Phone</label>
+            <label for="user-phone" class="modal-label">Phone</label>
             <div class="cont-input">
               <input
                 type="tel"
                 name="user-phone"
-                id="input-phone"
+                id="user-phone"
                 class="modal-input"
                 required
               />
@@ -601,12 +601,12 @@
             </div>
           </div>
           <div class="cont-form">
-            <label for="input-email" class="modal-label">Email</label>
+            <label for="user-email" class="modal-label">Email</label>
             <div class="cont-input">
               <input
                 type="email"
                 name="user-email"
-                id="input-email"
+                id="user-email"
                 class="modal-input"
                 required
               />
@@ -617,24 +617,23 @@
           </div>
           <div class="cont-textarea">
             <label for="user-comment" class="modal-label">Comment</label>
-            <div>
-              <textarea
-                name="user-comment"
-                id="user-comment"
-                class="modal-textarea"
-                placeholder="Text input"
-              ></textarea>
-            </div>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              class="modal-textarea"
+              placeholder="Text input"
+            ></textarea>
           </div>
           <div class="checkbox-cont">
             <input
               type="checkbox"
-              name="privacy-checkbox"
+              name="user-privacy"
               class="checkbox visually-hidden"
-              id="privacy-checkbox"
+              id="user-privacy"
+              value="true"
               required
             />
-            <label for="privacy-checkbox" class="checkbox-label">
+            <label for="user-privacy" class="checkbox-label">
               <span class="checkbox-span">
                 <svg width="10" height="8" class="checkbox-icon">
                   <use href="./images/icons.svg#vector"></use>
