--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
         <div class="subscribe-footer">
           <p class="subscribe-label">Subscribe</p>
           <form class="wrap-input">
-            <label for="subscribe-input">
+            <label class="footer-label" for="subscribe-input">
               <input
                 type="email"
                 name="user-email"
@@ -585,7 +585,7 @@
             </div>
           </div>
           <div class="cont-form">
-            <label for="-phone" class="modal-label">Phone</label>
+            <label for="user-phone" class="modal-label">Phone</label>
             <div class="cont-input">
               <input
                 type="tel"
