--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-overlay">
+    <div class="modal-overlay is-open">
       <div class="modal">
         <button type="button" class="btn-close">
           <svg class="btn-close-svg" width="8" height="8">
